pegasus/src/Pegasus/Compiler/tests/invalidMOF/badQualifierDecl10.mof
/* Invalid qualifier scope keyword */
Qualifier Abstract : boolean = false, 
    Scope(class, association, badScopeKeyword), 
    Flavor(EnableOverride, Restricted);
